--- a/razer-app/src/components/filter-panel/filter-panel.scss
+++ b/razer-app/src/components/filter-panel/filter-panel.scss
@@ -15,6 +15,7 @@
   border-radius: 0%;
   border-color: $card-content-description-color;
   color: $card-content-description-color;
+  margin-bottom: 20px;
   @include for-tablet {
     max-width: 450px;
   }
