--- a/razer-app/src/components/product-details/details.scss
+++ b/razer-app/src/components/product-details/details.scss
@@ -17,16 +17,23 @@
 .img-details-container {
   display: flex;
   justify-content: center;
+  height: fit-content;
 }
 
 .info-details-container {
   display: grid;
-  justify-content: center;
+  justify-items: center;
   text-align: center;
   align-content: center;
   margin-right: 30px;
   margin-left: 30px;
+}
 
-  @include for-tablet {
-  }
+.quantity-controls {
+  display: flex;
+  justify-content: center;
+}
+
+#card-btn {
+  max-width: fit-content;
 }
