--- a/razer-app/src/components/products-list/list.scss
+++ b/razer-app/src/components/products-list/list.scss
@@ -17,7 +17,7 @@
 
 .product-list-container {
   display: grid;
-  grid-template-rows: auto auto auto; /* Añadido una fila más para la descripción */
+  grid-template-rows: auto auto auto;
   padding-left: 30px;
   padding-right: 30px;
   gap: 30px;
