--- a/razer-app/src/components/login/login.scss
+++ b/razer-app/src/components/login/login.scss
@@ -1,5 +1,5 @@
 .login-background {
-  background-image: url("../images/stairs.jpg"); /* Ruta de la imagen de fondo */
+  background-image: url("../images/stairs.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
