Wishlist and Updates

--- a/razer-app/src/components/card-list/card-list.scss
+++ b/razer-app/src/components/card-list/card-list.scss
@@ -52,6 +52,8 @@ p {
 
   @include for-desktop {
     grid-template-columns: auto auto;
+    position: relative;
+    bottom: -60px;
   }
 }
 
@@ -67,6 +69,7 @@ p {
     flex-direction: row;
     height: auto;
     max-width: none;
+    align-items: center;
   }
 }
 
