--- a/razer-app/src/components/card/card.scss
+++ b/razer-app/src/components/card/card.scss
@@ -58,7 +58,7 @@ p {
 
 #carousel-btn {
   position: absolute;
-  bottom: 20px;
+  bottom: 30px;
 }
 
 .card-group > .card {
@@ -74,4 +74,31 @@ p {
   justify-content: center;
   gap: 10px;
   padding-bottom: inherit;
+}
+
+.product-card {
+  position: relative;
+
+  .image-container {
+    position: relative;
+  }
+
+  .heart-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    color: rgb(179, 70, 70);
+    opacity: 0;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
+  &:hover .heart-icon {
+    opacity: 1;
+  }
 }
