--- a/razer-app/src/components/carousel/carousel.scss
+++ b/razer-app/src/components/carousel/carousel.scss
@@ -52,14 +52,10 @@
 
 .carousel-control-next,
 .carousel-control-prev {
-  position: absolute;
-  top: 0;
-  bottom: 0;
+  height: fit-content;
+  top: 50%;
   z-index: 1;
-
-  @include for-desktop {
-    width: 6%;
-  }
+  color: #2efc05;
 }
 
 .carousel-title {
