--- a/razer-app/src/components/header/header.scss
+++ b/razer-app/src/components/header/header.scss
@@ -59,7 +59,8 @@
 
 .dropdown-btn {
   color: $card-content-title-color;
-  background-color: $card-content-background-color;
+  background-color: $card-content-background-image-color;
+  width: 165px;
 }
 
 .dropdown-menu {
