--- a/razer-app/src/components/login/login.scss
+++ b/razer-app/src/components/login/login.scss
@@ -11,7 +11,6 @@
 .login-card {
   max-width: 400px;
   width: 100%;
-  height: 400px;
   padding: 20px;
   border: none;
   border-radius: 10px;
@@ -20,6 +19,19 @@
   &__title {
     color: $card-content-title-color;
   }
+  &__link {
+    cursor: pointer;
+    color: #fff;
+    text-decoration: underline;
+    &:hover {
+      color: $color-green;
+    }
+  }
+}
+
+.login-card__text {
+  padding-top: 20px;
+  text-align: center;
 }
 
 .login-card h2 {
