--- a/razer-app/src/components/card-list/card-list.scss
+++ b/razer-app/src/components/card-list/card-list.scss
@@ -78,3 +78,22 @@ p {
   gap: 10px;
   padding-bottom: inherit;
 }
+
+.image-container {
+  position: relative;
+}
+
+.heart-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  color: rgb(179, 70, 70);
+  opacity: 0;
+  cursor: pointer;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.2);
+  }
+}
