--- a/razer-app/src/components/admin-product/admin-products.scss
+++ b/razer-app/src/components/admin-product/admin-products.scss
@@ -74,3 +74,16 @@
   color: $card-content-description-color;
   font-size: larger;
 }
+
+.bi {
+  cursor: pointer;
+}
+
+.bi-trash-fill {
+  color: red;
+}
+
+.product-name {
+  cursor: pointer;
+  text-decoration: underline;
+}
